# egui_collapsible_dock

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
examples/: demo.rs  demo_tabs.rs
src/: collapsible_toolbar.rs  dock_collapsible.rs  lib.rs
