[package]
name = "egui_collapsible_dock"
version = "0.1.0"
edition = "2021"
description = "A collapsible dock panel system for egui with smooth animations and state persistence"
license = "MIT OR Apache-2.0"
keywords = ["egui", "gui", "dock", "panel", "collapsible"]
categories = ["gui"]

[lib]
name = "egui_collapsible_dock"
path = "src/lib.rs"

[dependencies]
egui = "0.33.0"
# egui_dock = "0.17.0"
egui_dock = { path = "../egui-dock" }
egui-phosphor = { path = "../egui-phosphor" }
# egui-phosphor = "0.10.0"
# wgpu = { version = "25.0.2", features = ["vulkan"] }
serde = { version = "1.0", features = ["derive"] }

# Dependencies for examples
eframe = "0.33.0"
re_ui = { path = "../rerun/crates/viewer/re_ui" }

[features]
default = []

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "demo_tabs"
path = "examples/demo_tabs.rs"
